--- a/BangunIn/public/css/general/navbar.css
+++ b/BangunIn/public/css/general/navbar.css
@@ -1,12 +1,14 @@
 .judul{
     font-family: 'Oswald', sans-serif;
     color:#4c4c4c;
+    text-align: center;
 }
 .nav-side{
     margin-top:10%;
     margin-bottom:10%;
     color:#4c4c4c;
     text-align: center;
+    width: 100%;
 }
 .btn-link:hover {
     color: black;
